# agent-mcp

./: .gitignore  .mcp.json.example  README.md  config.yaml.example  pyproject.toml
src/agent_mcp/: agent.py  config.py  mcp_client.py  oauth.py  server.py
tests/: test_agent.py  test_config.py  test_e2e_oauth.py  test_oauth.py  test_server.py
