[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-mcp"
version = "0.1.0"
description = "MCP facade server that exposes high-level tools backed by sub-agent loops"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.26.0",
    "anthropic>=0.40.0",
    "pyyaml>=6.0",
]

[project.scripts]
agent-mcp = "agent_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_mcp"]
